--- a/src/sass/_icon.scss
+++ b/src/sass/_icon.scss
@@ -28,12 +28,3 @@
 .icon--quote-right {
     margin-left: 10px;
 }
-
-.share__list {
-    margin-left: 0;
-    float: right;
-
-    .skycon {
-        color: $socialGrey;
-    }
-}
